gccida/g0/init_builtins
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_builtins/src/cppinit.c:1182:22: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  init_builtins( cpp_reader_0 *pfile) 
                     ^~~~~~~~~~~~
                     cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_builtins/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_builtins/src/cppinit.c:1187:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *pfilea; // [rsp+8h] [rbp-38h] 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_builtins/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_builtins/src/cppinit.c:1188:1: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cpp_hashnode_0 *hp; // [rsp+10h] [rbp-30h] 
^~~~~~~~~~~~~~
cpp_hashnode
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_builtins/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_builtins/src/cppinit.c:1194:57: error: use of undeclared identifier 'unk_7628D0'
for ( b = builtin_array; b < ( const  struct builtin *)&unk_7628D0; ++b ) 
                                                        ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_builtins/src/obj/cppinit.o] Error 1
